sumo/tests/traci/ChangeLane/InvalidNode/errors.traci
Answered with error to command 19: Can not retrieve node with given ID
Error while receiving command: tcpip::Socket::receive() @ recv: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
